# immobiliare_agent

./: .dockerignore  .env_example  README.md  fastapi_endpoint.py  main.py  main_en.py  setup_vapi_sip.py  voice_assistant.py  voice_assistant_en.py  voice_tool.py
Pipecat_RE_Agent/server/: .env.example  bot.py  pyproject.toml  system_prompt.py
livekit_agents/: .gitignore  Dockerfile_IT  Dockerfile_VAPI  Dockerfile_inbound_IT  Dockerfile_outbound_IT  agent_inbound.py  agent_inbound_tr.py  database.py  pyproject.toml  real_estate.db  requirements.txt  system_prompt.py
livekit_agents/agents/: it_inbound_agent.py  it_outbound_agent.py  tr_inbound_agent.py
livekit_agents/italian_agent/: agent_inbound.py  system_prompt.py  tasks.py  utils.py
livekit_agents/livekit_real_estate_agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
livekit_agents/prompts/: it_inbound_prompt.py  it_outbound_prompt.py  tr_inbound_prompt.py
livekit_agents/tasks/: profile_task.py
livekit_agents/tests/: Grand_test_toolcall_accuracy.py  __init__.py  conftest.py  test_buyer_route.py  test_compilation.py  test_greeting.py  test_outbound_indirect_sales.py  test_outbound_opposizioni.py  test_renter_route.py  test_seller_route.py  test_tool_calls.py  utils.py
livekit_agents/tests/Grand_tests/: LLMs.txt  (+7 more)
livekit_agents/tools/: calendar_tools.py  database.py  real_estate_tools.py
livekit_agents/turkish_agent/: agent_inbound_tr.py  system_prompt_tr.py
livekit_agents/utils/: agents_utils.py  database.py  outbound_dispatch.py  tests_utils.py  vapi_outbound.py  vapi_tools_server.py
(+35 files in other folders)
