[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-real-estate-agents"
version = "0.1.0"
description = "Real Estate AI Agent with LiveKit"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "prompts*", "tools*", "utils*", "tasks*"]
